test/files/neg/t4163.check
t4163.scala:4: error: for comprehension must start with generator: '<-' expected but '=' found.
      x = 3
        ^
one error found
